--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=MyNewPass
-DB_NAME=webroutesapi
+DB_NAME=crud-dibimbing
 
 JWT_SECRET_KEY=taufik123@
 JWT_EXPIRES_IN=24h
